--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,146 +5,286 @@
     <head>
         <title>GardenMinder</title>
         <!--link rel="stylesheet" href="style.css"--> <!--comment in for style & color-->
-        <script>
-                var message = null;
-                function ajaxCallToServer() {
-                    var responseText = document.getElementById('response');
-                    var xmlhttp = new XMLHttpRequest(); var url = "/seedvault"
-                    xmlhttp.open("GET", url, true);
-                    xmlhttp.setRequestHeader("Content-type", "application/json");
-                    xmlhttp.onload = (res) => {
-                        console.log(res['target']['response']);
-                        message = res['target']['response'];
-                        responseText.innerHTML = message;
-                
-                    };
-                    xmlhttp.send();
-                }
-        </script>
+      
+        <style>
+            table, th, td {
+                border: 1px solid black; border-collapse: collapse;  
+            }
+            td, th {padding: 10px;}
+        </style>
+    <link rel="preconnect" href="http://127.0.0.1:8000/templates">
+
+  
+
+    <!--need following sources for JQuery AJAX:-->
+    <script
+    src="https://code.jquery.com/jquery-3.6.4.js"
+    integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+    crossorigin="anonymous"></script>
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
     </head>
-   <h1>Welcome to GardenMinder</h1>
+
+   <h1 style="text-align:center;">GardenMinder</h1>
     <body>
-        <div id = "options">
-            <button id="button1">account</button>
-            <button id="button2">seedvault</button>
-            <button id="button3">plants</button>
-            <button id="button4">wishlist</button>
-            <button id="button5">sensors</button>
-            <button id="button6">my data</button>
-            <button id="button7">climate</button>
+        
+        <!--login form (endpoint not set up)-->
+        <div>
+            <form action="login">
+                <input name="username" type="text" placeholder="gardener">
+                <input name="password" type="text" placeholder="password">
+                <button type="submit">submit</button>
+            </form>
         </div>
-        <form action="login">
-            <input name="username" type="text" placeholder="gardener">
-            <input name="password" type="text" placeholder="password">
-            <button type="submit">submit</button>
-        </form>
 
-        <p id="response">response</p>
+        <p id="response"></p>
+        <div>
+            <table id = "seeds table">
+                <!--SEED DISPLAY TABLE--called by seedvault_clicked--NEEDS ITERATION-->
+                <th>SEED TYPE </th><th>COLLECTION DATE </th><th>COLLECTION LOCATION </th><th># COLLECTED </th>
+                <tbody>
+                <tr>
+                    <td><p id="seed_type" ></p></td><td><p id="coll_date"></p></td><td><p id="coll_loc"></p></td><td><p id="num_coll"></p></td>
+                </tr>
+            </tbody>
+            </table>
+        </div>
 
-        <table id = "seeds table">
-            <th>table header</th>
-            <tbody>
-            <tr>table row
-                <td>table cell</td>
-                <td>table cell</td>
-                <td>table cell</td>
-            </tr>
-            <tr>table row
-                <td>table cell</td>
-                <td>table cell</td>
-                <td>table cell</td>
-            </tr>
-            <tr>table row
-                <td>table cell</td>
-                <td>table cell</td>
-                <td>table cell</td>
-            </tr>
-        </tbody>
+        <div id="area"></div>  <!--for button click returned data-->
+        <p>
+
+        </p>
+        <table id = "sensortable">
+            <th>SENSORS</th>
+                <tbody>
+                 <tr>
+                    <td><p href="#0" id="sensor_type"></p></td>
+                 </tr>
+                 <tr>
+                    <td><p href="#0" id="sensor_type"></p></td>
+                </tr>
+                <tr>
+                    <td><p href="#0" id="sensor_type"></p></td>
+                </tr>
+            </tbody>
         </table>
 
-        <script
-        src="https://code.jquery.com/jquery-3.6.4.js"
-        integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-        crossorigin="anonymous"></script>
+        <p id="data"></p>  <!--connects to .js appendData function-->
 
-<!--need for JQuery AJAX:-->
- <!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script-->
- 
- <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script-->
- <!--action when button is clicked--follows this route (function)-->
- <script src="/app/routers/gardenpathop.py"></script>
+        <p  href="#0" id="div"></p>  <!--for button click returned data-->
 
+
+       <!--seedvault display -->
+        <p href="#0" id="seed_type"></p>
+        <p href="#0" id="coll_loc"></p>
+        <p href="#0" id="coll_date"></p>
+        <p href="#0" id="num_coll"></p>
+
+       
+
+            <!--ADD SEED FORM-->
+        <form id="add seed form" action="/seedvault" method = "post">
+            <input name="seed_type" id="seed_type" type="text" placeholder="seed type" required>
+            <input name="coll_date" id="coll_date" type="text" placeholder="collected YYYY-MM-DD">
+            <input name="coll_loc" id="coll_loc" type="text" placeholder="location">
+            <input name="num_coll" id="num_coll" type="text" placeholder="# seeds">
+            <button type="submit">add seed</button>
+        </form>
+        <p>
+            
+        </p>
+    <!--FUNCTIONS-->        
+
+    <script src="templates"></script>
+
+    <!--main button-->
+    <script>
+        function main(){
+            $.ajax({
+                url: "/",
+                crossDomain: true,
+                type: "get",
+                dataType: "json",
+                success: function(data) {
+                    console.log("main page")
+                    console.log(data)
+                    $("#div").text(data);
+                },
+            error: function(err) { alert(err);}
+            });   
+        }
+    </script>
+
+    <script>main</script>
+
+<!--GET list/table of all seeds of a certain type (button)--displays in table-->
  <script>
-    function seedvault_clicked(){
+    src="/app/routers/gardenpathop.py"
+    function seedtype_clicked(){
+       
         $.ajax({
-            url: '/app/routers/gardenpathop/test_show_main',
+            url: "/seedvault/marigold",
+            type: "get",
+            dataType: "json",
             success: function(data) {
                 console.log("Here's your seeds")
                 console.log(data)
-                $("div").data(data);
+               
+                for (let i = 0; i<data.length; i++){ 
+                    $("#seed_type").append(data[i].seed_type)
+                    $("#coll_date").append(data[i].coll_date) 
+                    $("#coll_loc").append(data[i].coll_loc)
+                    $("#num_coll").append(data[i].num_coll)
+                }
             },
-        error: function(err) { alert(err);}
+        error: function(err) { console.log(err);}
         });   
     }
 </script>
 
+<!--POST add new seed (form)-->
 <script>
+    src="/app/routers/gardenpathop.py"
+    function add_seed(){
+
+        var seed_type;
+        var coll_loc;
+        var coll_date;
+        var num_coll;
+
+        $.ajax({
+            url: "/seedvault/",
+            type: "post",
+            contentType: "application/x-www-form-urlencoded",
+
+            success: function() {
+                console.log("seed added")
+                alert("seed added")
+                seed_type =$("#seed_type").val();
+                coll_loc =$("#coll_loc").val();
+                coll_date = $("#coll_date").val();
+                num_coll = $("#num_coll").val();
+            },
+        error: function(err) { console.log(err);}
+        });   
+    }
+</script>
+
+<!--GET one line list of sensors (button)-->
+<script>
+    src="/app/routers/sensorpathop.py"
     function sensors_clicked(){
         $.ajax({
-            url: name= "show_sensors", path: "/app/routers/sensorpathop.py",
-        
+            url: "/my_sensors/",
+            type: "get",
+            dataType: "json",
             success: function(data) {
-                console.log("Here's your sensors")
+                console.log("my sensors")
+                console.log(data)    
+                
+                for (let i = 0; i < data.length; i++){ 
+                   $("#sensor_type").append(data[i].sensor_type)
+                    
+                }
+              
+            },
+        error: function(err) { console.log(err);}
+        });   
+    }
+</script>
+
+<!--GET sensor table button--dynamically creates and fills table in function-->
+<script>
+    
+    src="/app/routers/sensorpathops.py"
+
+    function s_clicked(){
+        
+        $.ajax({
+            url: "/my_sensors",
+            crossDomain: true,
+            type: "get",
+            dataType: "json",
+            success: function(data) {
+                console.log("sensor table")
                 console.log(data)
-                $("div").data(data);
+                let area = $("#area");
+                let sensortable = $("<table>")
+                let column = Object.keys(data[0]);
+               
+                let tablerow = $("<tr>")
+                $.each(column, function(i, column) {
+                    let tableheader = $("<th>");
+                    tableheader.text(data);
+                    tablerow.append(tablerow);             
+                });
+                $.each(data, function(i, attrib){
+                    let tablerow = $("<tr>");
+                        let datavalues = Object.values(data[0]);
+                        $.each(datavalues, (i, datavalues) => {
+                            let tabledata = $("<td>");
+                            tabledata.text(attrib);
+                            tablerow.append(tabledata);
+                        })
+                        sensortable.append(tablerow);
+                })
+                        
             },
         error: function(err) { alert(err);}
         });   
     }
 </script>
 
-        <button onclick="seedvault_clicked()" >Python</button>   <!--go to seedvault function when button clicked-->
-        <script src="/app/routers/gardenpathop.py"></script>
+<!--GET plants button--should return all seeds-->
+<script>
+    src="/app/routers/gardenpathop.py"
+    $('#button3').click(function(){
+        $.ajax({
+            type: "get",
+            url: "/seedvault", 
+            dataType: "json",
+            success: function(data) {
+                console.log(data)
 
-        <button onclick="sensors_clicked()" >sensors</button>   <!--go to seedvault function when button clicked-->
-        <script type="text/javascript" src="/app/routers/sensorpathop.py"></script>
-
-
-        <!--makes main.py module accessible to front end-->
-        <script>
-            function page_load(){
-                $.ajax({
-                    url: "main.py"
+                var table = '<table>';
+                $.each(data, function(key, value){
+                    table += '<tr><td>'+key+':'+value+'</td></tr>';
                 })
-            }
-        </script>
-       
-        <p id="myData"></p>  <!--connects to .js appendData fx-->
 
-        <!--button onclick="{{ url_for(path= '/database.db') }}" >Python</button--> 
-        <!--button onclick="{{ url_for(path= 'test_show_seeds') }}" >Python</button--> 
+                seed_type =$("#seed_type").val();
+                coll_loc =$("#coll_loc").val();
+                coll_date = $("#coll_date").val();
+                num_coll = $("#num_coll").val();
+        },   
+        })
+    })
+</script>
+<!--attach functions to buttons-->
+        <button onclick="seedtype_clicked()">seeds by type</button>   <!--go to seedvault function when button clicked-->
 
-        {% block seedvault %}  
-             {{seed.seed_type}}
-        {% endblock %}
+        <button onclick="s_clicked()">sensor table</button>   <!--display sensor in table when button clicked-->
 
-    <p id="demo"></p>
-    <script>
-        document.getElementById("demo").innerHTML = "inner html demo";
-    </script>
-    </body>
-<!--"seedvault" URL LINKS on bottom of page-->
-    <p><a href="{{ url_for(name= 'test_show_main', path= '/app/routers/gardenpathop.py') }}">seedvault0</a></p>
-    <p><a href="{{ url_for(name= 'test_show_seeds', path= '/app/routers/gardenpathop.py') }}">seedvault1</a></p>
-    <p><a href="/">seedvault2</a></p>    <!--opens file directory-->
-    <p><a href="seedvault.html">seedvault3</a>  <!--opens file-->
-    <p><a href="script.js">seedvault4</a></p>    <!--opens file shows content-->
-    <link href="{{ url_for(name= 'test_show_main', path= '/app/routers/gardenpathop.py) }}">
-    <!--{{ }} add "/app/templates" to GET path-->  
-       
+        <button onclick="sensors_clicked()">sensors</button>   <!--display sensors as text when button clicked-->
+
+        <button onclick="main()">*</button>   <!--go to seedvault function when button clicked-->
+   
+        <button id="button3" type="submit">plants</button>
+
+<!--"seedvault" URL LINKS on bottom of page--will RELOAD page-->
+    <p><a href="/seedvault/">seedvault</a></p>    <!--opens seed database-->
+   
+
+    <link href="http://127.0.0.1:3000/templates/seedvault.html">
+    <link href="http://127.0.0.1:8000/templates/seedvault.html">
+    <link href="http://127.0.0.1:5500/templates/seedvault.html">
+  
+
+    <p id="response"></p>
+  
     </body>
     <script defer src="script.js"></script>
 </html>
 
-<script src="gardenpathop.py"></script>
+
 
